# AI_Employee

./: .env.example  .gitignore  AI_BRAIN_GUIDE.md  AUTH_WORKING.md  BRONZE_TIER_SUMMARY.md  CHROME_SETUP.md  FINAL_SUMMARY.md  GMAIL_WHATSAPP_TESTING.md  QUICKSTART_SILVER.md  QUICK_AUTH.md  README.md  RUN_SYSTEM_GUIDE.md  SECURITY.md  SILVER_TIER_SUMMARY.md  TESTING_GUIDE.md  ai_brain.py  claude_processor.py  main.py  orchestrator.py  pyproject.toml  qwen_processor.py  ralph_wiggum.py  run_system.py  setup_vault.py  test_ai_brain.py  test_e2e.py  test_gmail_only.py  test_gmail_watcher.py  test_silver_e2e.py  test_simple.py  test_watcher.py  test_whatsapp_only.py  test_whatsapp_watcher.py
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  README.md
AI_Employee_Vault/Done/: EMAIL_20260329_223854_Writing_help_whenever_you_need_it.md  EMAIL_20260331_112607_Writing_help_whenever_you_need_it.md  EMAIL_20260331_113008_Testing.md  FILE_20260327_153316_test_document.txt.md  FILE_20260327_153650_client_invoice_request.txt.md  FILE_20260327_175533_simple_test.txt.md  FILE_20260327_180556_simple_test.txt.md  FILE_20260329_193958_simple_test.txt.md  FILE_20260329_194105_simple_test.txt.md
docs/: GMAIL_SETUP.md  WHATSAPP_SETUP.md
mcp_servers/: __init__.py  email_mcp.py  whatsapp_mcp.py
scripts/: __init__.py  gmail_auth.py  whatsapp_init.py
tests/: README.md  __init__.py  test_ai_brain.py  test_gmail_only.py  test_mcp_integration.py  test_simple.py  test_whatsapp_only.py
watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  whatsapp_watcher.py
(+22 files in other folders)
